--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,9 @@
 [submodule "modules/mod-synthesize-trainer"]
 	path = modules/mod-synthesize-trainer
 	url = git@github.com:AlvinZhu/mod-synthesize-trainer.git
+[submodule "modules/mod-solocraft"]
+	path = modules/mod-solocraft
+	url = git@github.com:trickerer/mod-solocraft.git
+[submodule "modules/mod-solo-lfg"]
+	path = modules/mod-solo-lfg
+	url = git@github.com:azerothcore/mod-solo-lfg.git
