--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,6 @@ local.properties
 #NPCBots
 !/data/sql/custom/db_characters/
 !/data/sql/custom/db_world/
+azerothcore-wotlk.7z
+data.7z
+db_alvin_custom/20231118211253.nb3
